--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,18 @@
             </plugin>
 		</plugins>
 	</build>
+	
+	<distributionManagement>
+    <repository>
+        <id>deploymentRepo</id>
+        <url>http://localhost:8081//repository/maven-releases/
+	</url>
+    </repository>
+    <snapshotRepository>
+        <id>deploymentRepo</id>
+        <url>http://localhost:8081//repository/maven-snapshots/
+	</url>
+    </snapshotRepository>
+	</distributionManagement>
 
 </project>
