--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,16 @@
             </plugin>
 		</plugins>
 	</build>
-
+<distributionManagement>
+    <repository>
+        <id>deploymentRepo</id>
+        <url>http://172.10.0.140:8081//repository/maven-releases/
+	</url>
+    </repository>
+    <snapshotRepository>
+        <id>deploymentRepo</id>
+        <url>http://172.10.0.140:8081//repository/maven-snapshots/
+	</url>
+    </snapshotRepository>
+	</distributionManagement>
 </project>
