--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,23 @@
 					</execution>
 				</executions>
 			</plugin>
+			   <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>2.6</version>
+        </plugin>
+        <plugin>
+        <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-plugin-bundle-maven-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
 		</plugins>
 	</build>
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<url>http://192.168.1.7:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
