--- a/pom.xml
+++ b/pom.xml
@@ -118,11 +118,15 @@
       </plugin>
 		</plugins>
 	</build>
-	<distributionManagement>
-		<repository>
-			<id>deploymentRepo</id>
-			<url>http://192.168.1.7:8081/repository/maven-releases/</url>
-		</repository>
+<distributionManagement>
+    <repository>
+        <id>deploymentRepo</id>
+        <url>http://192.168.1.7:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>deploymentRepo</id>
+        <url>http://192.168.1.7:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
 	</distributionManagement>
 
 </project>
