--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,19 @@
 		<version>2.5.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.esprit.examen</groupId><!-- ltestttt -->
-	<artifactId>tpAchatProject</artifactId><!-- lookup parent from repository -->
-	<version>1.0</version><!-- lookup parent from repository -->
+	<groupId>com.esprit.examen</groupId>
+	<artifactId>tpAchatProject</artifactId>
+	<version>1.0</version>
 	<name>tpAchatProject</name>
 	<description>tpAchatProject</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<jacoco.version>0.8.6</jacoco.version>
+    		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    		<sonar.language>java</sonar.language>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -32,12 +37,8 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
-         
-<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
- <dependency>
-  <groupId>org.mockito</groupId>
-   <artifactId>mockito-core</artifactId>
-    </dependency>
+
+
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -59,7 +60,6 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
-			<version>1.18.22</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -75,23 +75,87 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
+    			<groupId>org.jacoco</groupId> 
+   			 <artifactId>jacoco-maven-plugin</artifactId>
+  			  <version>0.8.6</version>
+		</dependency>
 	</dependencies>
+	
+
+	
 
 	<build>
+		
 		<plugins>
+			<plugin>
+   				 <groupId>org.jacoco</groupId>
+ 				   <artifactId>jacoco-maven-plugin</artifactId>
+  				  <version>${jacoco.version}</version>
+  				  <executions>
+    				    <execution>
+        				    <id>jacoco-initialize</id>
+        					 <goals>
+            					  <goal>prepare-agent</goal>
+            					</goals>
+					</execution>
+					<execution>
+					    <id>jacoco-site</id>
+					    <phase>package</phase>
+					    <goals>
+						<goal>report</goal>
+					    </goals>
+					</execution>
+				    </executions>
+				</plugin>
+			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
+			        <groupId>org.apache.maven.plugins</groupId>
+                        	<artifactId>maven-resources-plugin</artifactId>
+                        	<version>3.1.0</version>
+		       </plugin>
+		  
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version> <!-- matters until now-->
+                <dependencies>
+                    <!-- to let surefire to run JUnit 4 but also JUnit 5 tests -->
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.0.1</version>
+                    </dependency>
+                    <!-- JUnit vintage engine to run JUnit 3 or JUnit 4 tests -->
+                    <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                        <version>4.12.1</version>
+                    </dependency>
+                    <!-- JUnit 5 engine to run JUnit 5 tests -->
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.0.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
+        
+
 		</plugins>
 	</build>
-	
-	<distributionManagement>
+
+
+<distributionManagement>
     <repository>
         <id>deploymentRepo</id>
         <url>http://localhost:8081//repository/maven-releases/
