--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8089
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/tpachato?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
