--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ server.port=8089
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/tpachato?useUnicode=true&createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
+#spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
