--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=1234
-      - MYSQL_DATABASE=tpachto
+      - MYSQL_DATABASE=tpachat
       - MYSQL_USER=root
       - MYSQL_PASSWORD=1234
     volumes:
@@ -20,7 +20,7 @@ services:
     container_name: achatspring
     restart: on-failure
     environment:
-      - spring.datasource.url=jdbc:mysql://mysqldb:3306/tpachto?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+      - spring.datasource.url=jdbc:mysql://mysqldb:3306/tpachat?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     ports:
       - 8089:8089
     depends_on:
