--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/tpachat?useUnicode=true&createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=root
+spring.datasource.username=root
 spring.datasource.password=1234
 #spring.datasource.password=
 ### JPA / HIBERNATE ###
