--- a/pom.xml
+++ b/pom.xml
@@ -118,12 +118,12 @@
 <distributionManagement>
     <repository>
         <id>deploymentRepo</id>
-        <url>http://172.10.0.140:8081//repository/maven-releases/
+        <url>http://localhost:8081//repository/maven-releases/
 	</url>
     </repository>
     <snapshotRepository>
         <id>deploymentRepo</id>
-        <url>http://172.10.0.140:8081//repository/maven-snapshots/
+        <url>http://localhost:8081//repository/maven-snapshots/
 	</url>
     </snapshotRepository>
 	</distributionManagement>
