--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.servlet.context-path=/SpringMVC
 server.port=8089
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3308/tpachat?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/tpachat?useUnicode=true&createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
