--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.servlet.context-path=/SpringMVC
 server.port=8089
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/tpachat?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://172.10.0.140:3306/tpachat?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
 ### JPA / HIBERNATE ###
