--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,19 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<jacoco.version>0.8.6</jacoco.version>
+    		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    		<sonar.language>java</sonar.language>
 	</properties>
 	<dependencies>
+	
+	<dependency>
+    			<groupId>org.jacoco</groupId> 
+   			 <artifactId>jacoco-maven-plugin</artifactId>
+  			  <version>0.8.6</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -80,30 +91,25 @@
 	<build>
 		<plugins>
 		<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.7</version>
-				
-				<executions>
-					<execution>
-						<id>prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
+   				 <groupId>org.jacoco</groupId>
+ 				   <artifactId>jacoco-maven-plugin</artifactId>
+  				  <version>${jacoco.version}</version>
+  				  <executions>
+    				    <execution>
+        				    <id>jacoco-initialize</id>
+        					 <goals>
+            					  <goal>prepare-agent</goal>
+            					</goals>
 					</execution>
 					<execution>
-						<id>report</id>
-						<goals>
-							<goal>report</goal>
-						</goals>
-						<configuration>
-							<formats>
-								<format>XML</format>
-							</formats>
-						</configuration>
+					    <id>jacoco-site</id>
+					    <phase>package</phase>
+					    <goals>
+						<goal>report</goal>
+					    </goals>
 					</execution>
-				</executions>
-			</plugin>
+				    </executions>
+				</plugin>
 		
 		
 		
