--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     image: mysql/mysql-server:8.0
     restart: unless-stopped
     ports:
-      - 3308:3308
+      - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ROOT_PASSWORD=1234
       - MYSQL_DATABASE=tpachat
       - MYSQL_USER=root
-      - MYSQL_PASSWORD=
+      - MYSQL_PASSWORD=1234
     volumes:
       - /var/lib/mysql
 
@@ -20,7 +20,7 @@ services:
     container_name: achatspring
     restart: on-failure
     environment:
-      - spring.datasource.url=jdbc:mysql://mysqldb:3308/tpachat?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+      - spring.datasource.url=jdbc:mysql://mysqldb:3306/tpachat?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     ports:
       - 8089:8089
     depends_on:
